@@ -241,6 +241,8 @@ struct gengetopt_args_info
   const char *papalwaysok_help; /* Always allow 'PAP' (password) style authentication (not advised) help description.  */
   int chillixml_flag;	/* Use ChilliSpot XML in WISPr blocks (default=off).  */
   const char *chillixml_help; /* Use ChilliSpot XML in WISPr blocks help description.  */
+  int usetap_flag;	/* Use a TAP instead of TUN (linux only) (default=off).  */
+  const char *usetap_help; /* Use a TAP instead of TUN (linux only) help description.  */
   
   int help_given ;	/* Whether help was given.  */
   int version_given ;	/* Whether version was given.  */
@@ -319,6 +321,7 @@ struct gengetopt_args_info
   int wpaguests_given ;	/* Whether wpaguests was given.  */
   int papalwaysok_given ;	/* Whether papalwaysok was given.  */
   int chillixml_given ;	/* Whether chillixml was given.  */
+  int usetap_given ;	/* Whether usetap was given.  */
 
 } ;
 
